--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,6 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
@@ -25,3 +23,5 @@
   </div>
 
 </header>
+
+<a class="site-title" href="{{ site.baseurl }}/"><img src="{{ my_page.url | prepend: site.baseurl }}/res/img/logo_24h-RVB-orginal-scaled.png"/></a>
