--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,17 +11,11 @@
         </svg>
       </a>
 
-      <div class="trigger">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
+      {% include pages.html %}
     </nav>
 
   </div>
 
-</header>
+  <a class="site-title" href="{{ site.baseurl }}/"><img src="{{ my_page.url | prepend: site.baseurl }}/res/img/logo_24h-RVB-orginal-scaled.png"/></a>
 
-<a class="site-title" href="{{ site.baseurl }}/"><img src="{{ my_page.url | prepend: site.baseurl }}/res/img/logo_24h-RVB-orginal-scaled.png"/></a>
+</header>
