Set pages template.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     {% include pages.html %}
 
     <div>
-      <a href="#" >CREDITS</a>
+      <a href="{{ site.baseurl }}/credits">CREDITS</a>
     </div>
 
   </div>
