--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,4 +18,6 @@
 
   <a class="site-title" href="{{ site.baseurl }}/"><img src="{{ my_page.url | prepend: site.baseurl }}/res/img/logo_24h-RVB-orginal-scaled.png"/></a>
 
+  {% include menu.html %}
+
 </header>
