--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,3 +1,4 @@
+<div class="menu">
 <a class="page-link" href="{{ site.baseurl }}/">ACCUEIL</a>
 {% for cur_page in site.pages %}
   {% if cur_page.title and cur_page.path contains 'menu' %}
@@ -19,3 +20,4 @@
 {% if site.soundcloud_page %}
   <a class="page-link" href="{{ site.soundcloud_page }}"><img src="{{ my_page.url | prepend: site.baseurl }}/res/img/soundcloud-1.svg" /></a>
 {% endif %}
+</div>
