--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,28 @@
 /**
  * Site header
  */
+.menu{
+    margin: auto;
+    margin-top: 10%;
+    width: 50%;
+    margin-right: 10%;
+    margin-left: 35%;
+ }
+
+.photo-gallery li{
+      float: left;
+      width: 45%;
+      padding: 5px;
+    }
+.photos{
+  min-height: 200px;
+  max-height: 200px;
+  min-width: 300px;
+  max-width: 300px;
+}
+
+
+
 .site-header {
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
@@ -17,6 +39,8 @@
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
+    top: 0px;
+    position: absolute;
 
     &,
     &:visited {
