--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,7 @@
 <div class="menu">
+  <div class="wrapper">
+    <p>Des musiciens trublions déjantés forts sympathiques!</p>
+  </div>
 <a class="page-link" href="{{ site.baseurl }}/">ACCUEIL</a>
 {% for cur_page in site.pages %}
   {% if cur_page.title and cur_page.path contains 'menu' %}
