--- a/css/main.scss
+++ b/css/main.scss
@@ -51,3 +51,41 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+
+html{
+    height: 100%;
+}
+
+body{
+    background-image: url(../printaniere2.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+}
+
+iframe{
+    max-height: 100px;
+}
+
+.menu{
+    margin: auto;
+    margin-top: 10%;
+    width: 50%;
+    margin-right: 10%;
+    margin-left: 35%;
+ }
+
+.photo-gallery li{
+      float: left;
+      width: 45%;
+      padding: 5px;
+}
+
+.photos{
+  min-height: 200px;
+  max-height: 200px;
+  min-width: 300px;
+  max-width: 300px;
+}
