--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $spacing-unit:     30px;
 
 $text-color:       white;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      red;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
@@ -58,7 +58,7 @@ html{
 }
 
 body{
-    background-image: url(../printaniere2.jpg);
+    background-image: url(../print.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
