Fixing background image.

--- a/css/main.scss
+++ b/css/main.scss
@@ -58,7 +58,7 @@ html{
 }
 
 body{
-    background-image: url(../print.jpg);
+    background-image: url(../res/img/print.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
