Fix images displaying.

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -13,14 +13,14 @@
 {% endfor %}
 
 {% if site.facebook_page %}
-  <a class="page-link" href="{{ site.facebook_page }}"><img src="{{ my_page.url | prepend: site.baseurl }}/res/img/facebook-4.svg" /></a>
+  <a class="page-link" href="{{ site.facebook_page }}"><img src="{{ my_page.url | prepend: site.baseurl }}/res/logo/facebook-4.svg" /></a>
 {% endif %}
 
 {% if site.youtube_page %}
-  <a class="page-link" href="{{ site.youtube_page }}"><img src="{{ my_page.url | prepend: site.baseurl }}/res/img/youtube-9.svg" /></a>
+  <a class="page-link" href="{{ site.youtube_page }}"><img src="{{ my_page.url | prepend: site.baseurl }}/res/logo/youtube-9.svg" /></a>
 {% endif %}
 
 {% if site.soundcloud_page %}
-  <a class="page-link" href="{{ site.soundcloud_page }}"><img src="{{ my_page.url | prepend: site.baseurl }}/res/img/soundcloud-1.svg" /></a>
+  <a class="page-link" href="{{ site.soundcloud_page }}"><img src="{{ my_page.url | prepend: site.baseurl }}/res/logo/soundcloud-1.svg" /></a>
 {% endif %}
 </div>
