Moved description from the menu into the header.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,10 @@
 
   <a class="site-title" href="{{ site.baseurl }}/"><img src="{{ my_page.url | prepend: site.baseurl }}/res/logo/logo_24h-RVB-orginal-scaled.png"/></a>
 
+  <p class="wrapper description">
+    {{ site.description }}
+  </p>
+
   {% include menu.html %}
 
 </header>
