--- a/_sass/custom/_default.scss
+++ b/_sass/custom/_default.scss
@@ -1,10 +1,17 @@
+.site-header {
+  text-align: center;
+}
 .site-title {
-  // position: absolute;
-  // top: 0px;
+  float: none;
+}
+
+.site-nav {
+  float: none;
 }
 
 .site-footer {
   background-color: #AD3538;
+  text-align: center;
 }
 
 .pages a {
@@ -14,9 +21,11 @@
 
 .menu {
   background-color: white;
+  margin: auto;
+  width: 35%;
 }
 .menu a {
-  padding-left: 15px;
+  padding: 7px;
   color: #AD3538;
 }
 .menu svg > :first-child {
@@ -27,33 +36,25 @@
 ////////////////////////
 
 html{
-    height: 100%;
+  height: 100%;
 }
 
 body{
-    background-image: url(../res/img/print.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 100%;
+  background-image: url(../res/img/print.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 iframe{
-    max-height: 100px;
+  max-height: 100px;
 }
 
-.menu{
-    margin: auto;
-    margin-top: 10%;
-    width: 50%;
-    margin-right: 10%;
-    margin-left: 35%;
- }
-
 .photo-gallery li{
-      float: left;
-      width: 45%;
-      padding: 5px;
+  float: left;
+  width: 45%;
+  padding: 5px;
+  list-style-type: none;
 }
 
 .photos{
