Temporary white background color for various texts on pages.

--- a/_sass/custom/_default.scss
+++ b/_sass/custom/_default.scss
@@ -50,6 +50,19 @@ iframe{
   max-height: 100px;
 }
 
+.description {
+  background-color: white;
+  width: 25%;
+}
+
+.page-content {
+  background-color: white;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 35%;
+}
+
 .photo-gallery li{
   float: left;
   width: 45%;
